# OpenAgentVisualizer

./: .env.example  .env.production  .gitignore  CLAUDE.md  OpenAgentVisualizer_Research.md  README.md  docker-compose.loadtest.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.ue5.yml  docker-compose.yml  playwright.config.ts
.claude/: settings.json
Product_Documents/: PIPELINE.md
agents/: EVALUATION.md  HANDOFF.md  PERMISSIONS.md  PIPELINE.md  TEAM.md  TOOLS.md  product-context.md
docs/: api-specification.md  database-schema.md  deployment-plan.md  discovery-report.md  security-plan.md  sprint-backlog.md  testing-strategy.md
src/cli/: pyproject.toml  setup.py
src/cli/oav/: cli.py  config.py  install.py  status.py
src/cli/oav/__tests__/: test_cli.py  test_hook_registration.py
src/cli/oav_cli/: __init__.py  charts.py  client.py  config.py  display.py  main.py
src/cli/oav_cli/commands/: config_cmd.py  control.py  health.py  leaderboard.py  metrics.py  status.py  stream.py  topology.py
src/cli/tests/: test_cli_commands.py
src/sdk/: README.md  pyproject.toml
src/sdk/openagentvisualizer/: __init__.py
src/sdk/openagentvisualizer/adapters/: anthropic_adapter.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  openai_adapter.py
src/sdk/openagentvisualizer/core/: event.py  pii_redactor.py  ring_buffer.py  tracer.py
src/sdk/openagentvisualizer/exporters/: otlp_exporter.py  rest_exporter.py
src/sdk/tests/: conftest.py  test_langchain_adapter.py  test_otlp_exporter.py  test_pii_redactor.py  test_ring_buffer.py  test_sprint2_compatibility.py  test_sprint3_compatibility.py  test_tracer.py
(+682 files in other folders)
