[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagentvisualizer"
version = "0.1.0"
description = "Python SDK for OpenAgentVisualizer — connect any AI agent in 3 lines"
readme = "README.md"
license = { text = "FSL-1.1-MIT" }
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.30.0"]
autogen = ["pyautogen>=0.2.0"]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
